[workspace]
resolver = "2"

members = [
    "mutiny-core",
    "mutiny-wasm",
]


# Tell `rustc` to optimize for small code size.
[profile.release.package.mutiny-core]
opt-level = "z"

[profile.release.package.mutiny-wasm]
opt-level = "z"

[patch.crates-io]
lightning-background-processor = { git = "https://github.com/utxostack/rust-lightning.git", branch = "wasm-adapt" }
lightning = { git = "https://github.com/utxostack/rust-lightning.git", branch = "wasm-adapt" }
lightning-types = { git = "https://github.com/utxostack/rust-lightning.git", branch = "wasm-adapt" }
lightning-invoice = { git = "https://github.com/utxostack/rust-lightning.git", branch = "wasm-adapt" }
lightning-rapid-gossip-sync = { git = "https://github.com/utxostack/rust-lightning.git", branch = "wasm-adapt" }
lightning-transaction-sync = { git = "https://github.com/utxostack/rust-lightning.git", branch = "wasm-adapt" }
